Fix readability issue

--- a/src/app/modules/tv/components/tv-clock/tv-clock.component.scss
+++ b/src/app/modules/tv/components/tv-clock/tv-clock.component.scss
@@ -1,5 +1,4 @@
 .time {
     font-size: 80px;
     line-height: 80px;
-    opacity: 0.6;
 }
