--- a/src/app/modules/tv/components/tv-news/tv-news.component.scss
+++ b/src/app/modules/tv/components/tv-news/tv-news.component.scss
@@ -7,7 +7,6 @@
     overflow: hidden;
 
     h1 {
-        opacity: 0.6;
         font-size: 40px;
         line-height: 65px;
         padding-bottom: 16px;
@@ -20,7 +19,6 @@
         h5,
         h6,
         p {
-            opacity: 0.6;
             font-size: 30px;
             line-height: 49px;
             padding-bottom: 8px;
