--- a/src/app/modules/tv/components/tv-weather/tv-weather.component.scss
+++ b/src/app/modules/tv/components/tv-weather/tv-weather.component.scss
@@ -1,7 +1,6 @@
 .weather {
     font-size: 80px;
     line-height: 80px;
-    opacity: 0.6;
     display: flex;
     align-items: center;
     justify-content: center;
